# drafft-ink

./: .gitignore  Cargo.toml  flake.nix  result
crates/drafftink/: Cargo.toml
crates/drafftink-app/: default.nix
crates/drafftink-app/src/: app.rs  main.rs  ui.rs  web.rs
crates/drafftink-core/: Cargo.toml
crates/drafftink-core/src/: canvas.rs  input.rs  sync.rs
crates/drafftink-core/src/shapes/: ellipse.rs  group.rs  rectangle.rs
crates/drafftink-render/src/: vello_impl.rs
crates/drafftink-server/: default.nix
crates/drafftink-server/src/: main.rs
crates/drafftink-widgets/: Cargo.toml
crates/drafftink-widgets/src/: common.rs
nix/: crane.nix  devshell.nix
