[workspace]
resolver = "2"
members = [
    "crates/drafftink",
    "crates/drafftink-core",
    "crates/drafftink-render",
    "crates/drafftink-widgets",
    "crates/drafftink-app",
    "crates/drafftink-server",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0"
rust-version = "1.86"

[workspace.dependencies]
# Geometry and color primitives (match vello master requirements)
kurbo = { version = "0.13", features = ["serde"] }
peniko = "0.6"

# Rendering - use git master for wgpu 29 compatibility
vello = { git = "https://github.com/linebender/vello", rev = "dd9a6cce233a09fd5fff3678b3fff49675a7767d" }
roughr = "0.12"
rough_vello = "0.13"

# Windowing and GPU
winit = "0.30"
wgpu = "29"  # Match vello master and egui 0.34

# UI
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = { version = "0.34", default-features = false }
egui_extras = { version = "0.34", features = ["svg"] }

# Async
pollster = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# WASM dependencies
wasm-bindgen = "=0.2.121" # keep this synced with nixpkgs wasm-bindgen-cli
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
web-time = "1.1"

# Utilities
uuid = { version = "1.11", features = ["v4", "js", "serde"] }

# File dialogs (native only)
rfd = "0.15"

# Clipboard (native only)
arboard = "3"

# PNG encoding
png = "0.17"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
