[package]
name = "drafftink"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0"
description = "DrafftInk - Collaborative whiteboard application (placeholder crate)"
repository = "https://github.com/patwie/drafft-ink"
readme = "README.md"
keywords = ["whiteboard", "drawing", "collaboration"]
categories = ["graphics", "visualization"]

[dependencies]
